Fixed Logo width on iOS devices

--- a/src/scss/pages/coming-soon.scss
+++ b/src/scss/pages/coming-soon.scss
@@ -18,7 +18,7 @@
 
     &__logo {
         position: relative;
-        width: max-content;
+        width: 71px;
         overflow: hidden;
         z-index: 30;
         position: absolute;
@@ -124,6 +124,7 @@
 
         &__logo {
             height: 70px;
+            width: 125px;
             top: 26px;
         }
 
